[package]
name = "extendr-engine"
version = "0.3.1"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Thomas Down",
    "Mossa Merhi Reimert <mossa@sund.ku.dk>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Hiroaki Yutani",
    "Ilia A. Kosenkov <ilia.kosenkov@outlook.com>"
]
edition = "2021"
description = "Safe and user friendly bindings to the R programming language."
license = "MIT"
repository = "https://github.com/extendr/extendr"

[dependencies]
libR-sys = { git = "https://github.com/eitsupi/libR-sys", rev = "de5bdb80bce26879ceb23b7cc66c51421666f1e6"}

[features]
default = []

# All features to test
tests-all = ["libR-sys/use-bindgen"]
